# simple-wasm-template

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
src/: lib.rs  main.rs
