[package]
name = "{{project-name}}"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'HtmlElement',
  'Window',
]

[profile.release]
opt-level = "s"
